--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -179,14 +179,16 @@ footer {
 }
 
 .card1 {
-  display: inline-block;  
+  display: inline;
+  float: left;
   background-color: white;
-  padding: 20px;
-  margin: 10px;
   width: 30%;
   border: 1px solid black;
   border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
 }
+
 
 .card1 h4 {
   margin-bottom: 1em;
@@ -213,6 +215,7 @@ footer {
   background-position: center;
   padding: 100px 5%;
   border-radius: 25px;
+  margin-top: 200px;
 }
 
 .education-container {
