--- a/zoo-css-challenge/style.css
+++ b/zoo-css-challenge/style.css
@@ -4,6 +4,8 @@
   
 }
 
+p {word-spacing: 1px;}
+
 header {
   background-color: #211a1d;
   color: #ffffff;
@@ -263,3 +265,4 @@ margin-left: 325px;
 .programs .card {
   display: block;
 }
+
